--- a/manuscripts/child-documents/discussion.Rmd
+++ b/manuscripts/child-documents/discussion.Rmd
@@ -1,23 +1,15 @@
 # Discussion
 
-Overall, we found that in our sample, contingent on the correctness of all background assumptions used to compute our estimates, EEG is generally poor at detecting network variants in both phase- and amplitude-based functional connectomes, regardless of frequency band. Where we did find evidence supportive of network variants (phase-coupling in the alpha band), effects were small and inconsistent across participants.
+In this study, we explored the feasibility of using EEG to study network variants. We tested for the presence of network variants by estimating how phase and amplitude coupling functional connectomes differ between and within individuals across different timescales using measures of network similarity, contrasting the magnitude of each of these effects across sessions and states at the group-level, and examining their consistency at the individual-level. Based on the findings of previous fMRI network variant studies, we expected to find effects consistent with functional connectomes that were more similar within than between individuals, with smaller variations in similarity related to session or state---consistent with the idea that functional networks are stable and trait-like with equal amounts of common and unique variance between individuals [@grattonetal_FunctionalBrainNetworks_2018]. Overall, the group-level effect sizes most compatible with our data, given the background model, showed that both phase and amplitude coupling functional connectomes were more similar within than between individuals across timescales, with the strongest differences in similarity within and between individuals occurring for functional connectomes from the same session and state, and the weakest differences occurring for functional connectomes from the different sessions and states. However, in general, these effect sizes were at most small and not practically relevant, or were practically nil in the case of delta, theta, beta, and gamma band amplitude coupling functional connectomes. In the few cases where effect sizes were considered practically relevant, they were still at most small, and were not consistent with the larger differences reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018]. Moreover, these cases were often unrepresentative of the variability seen at the individual-level, where the data did not resolve whether the most compatible effect sizes were positive or negative for a considerable portion of participants at most levels of the session and state predictors across timescales. Although a number of participants did have consistently positive effect sizes that were small and practically relevant (and, in a handful of cases, comparable to what has been reported in the fMRI literature), we would not consider these results to be consistent with the stable and trait-like characterization of functional networks reported in the fMRI literature [cf. @grattonetal_FunctionalBrainNetworks_2018], given that trait-like functional networks would theoretically create consistent differences for all participants. Considered together, at most our findings provided weak supportive evidence for the presence of network variants in a subset of our sample for phase coupling functional connectomes in the theta, alpha, beta, and gamma bands, but did not generally demonstrate the feasibility of using EEG to study network variants given the inconsistencies observed across participants.
 
-That said, one thing we do see is that the group-level similarity estimates follow the general pattern we would expect based on common sense (the more "within" we get, the more similarity there is)
+To our knowledge, we are the first to investigate the feasibility of using EEG to study network variants. Consequently, we are unaware of any non-fMRI studies directly comparable to our own, with which we can evaluate our results. 
 
-## Things to talk about
+Previous research has found that functional connectomes are surprisingly similar within individuals---with few exceptions, our results are consistent with this finding. However, our results also indicate that functional connectomes are surprisingly similar between individuals (with few exceptions). The implication of our results...
 
-Higher density EEG caps
+## Limitations
 
-Testing concurrent EEG and fMRI to rule out sample issues
+There are several methodological and statistical assumptions that are important to consider when evaluating our results. First, we assumed that our EEG system had a sufficient electrode density for studying network variants. Network variants are likely sensitive to the number of sites or electrodes used when estimating functional connectivity, as this restricts the number of data points that can be used to compare any two functional connectomes. For example, with a small number of electrodes there may not be enough points in a functional connectome to adequately differentiate between individuals, resulting in between individual similarity being overstated. fMRI studies typically use a much higher number of sites, for example @grattonetal_FunctionalBrainNetworks_2018 used a 333 site cortical parcellation, thus, higher density EEG systems (e.g., 128, 256, or 512 electrodes) may be better-equipped to study network variants.
 
-Trying different connectivity measures
+Second, we assumed that five minute recordings would be sufficient to get stable functional connectivity estimates with EEG given that (1) the longer scanning times needed to reliably detect network variants with fMRI is considered a consequence of its infraslow sampling rate [@seitzmanetal_TraitlikeVariantsHuman_2019], rather than a consequence of the timeframe of of the neural processes we are interested in; and (2) EEG samples a substantially larger number of data points than fMRI in a much shorter timeframe. Additionally, we assumed that the connectivity structure in each frequency band was stationary over the length of the recording for both phase and amplitude coupling functional connectomes. Although neural oscillations are naturally non-stationary, varying from moment to moment [@faisaletal_NoiseNervousSystem_2008], stationary patterns of functional connectivity during resting state have been identified in EEG [e.g., @olguin-rodriguezetal_CharacteristicFluctuationsStable_2018], fMRI [e.g., @laumannetal_StabilityBOLDFMRI_2017], and simultaneous EEG-fMRI studies [e.g., @danielarzate-menaetal_StationaryEEGPattern_2022], with consistent positive or negative coupling occurring between sites or electrodes, even when averaging over multiple epochs. These stationary patterns are thought to be the substrate for effective brain function, permitting the adaptability and efficiency needed to optimize responses to our often unpredictable environment [@garrettetal_MomenttomomentBrainSignal_2013], and thus reflect neuropsychologically relevant signals of interest. However, we do note that approaches accounting for nonlinear dynamics may provide complimentary insights to those that focus on the stable aspects of network variants [e.g., @vandevilleetal_WhenMakesYou_2021].
 
-Recording length
-
-Statistical limitations
-
-Generalizability
-
-Contrast results with those from @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021
-
-we find little evidence of network variants in both phase and amplitude functional connectomes across frequency bands, given the correctness of all assumptions in our model.
+Third, we assumed that network variants could be observed when considering only phase and amplitude coupling with non-zero lag, discounting the true zero-lag coupling that occurs in functional networks. This discounting leads to an underestimation of true connectivity for both the phase lag index and amplitude envelope correlation by a non-trivial amount [@hippetal_LargescaleCorticalCorrelation_2012; @stametal_PhaseLagIndex_2007], and the spatial mixing caused by volume conduction makes this assumption difficult to work around. Although both phase and amplitude coupling can be estimated to include zero-lag coupling---supplemented with tests against volume conduction [@cohen_AnalyzingNeuralTime_2014]---this approach is impractical for EEG connectomics research since it requires inspecting hundreds thousands of individual connections to rule out possible contamination by volume conduction. <!-- maybe bring up mostame here? -->
