--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -11,7 +11,7 @@ tar_load(participant_descriptives)
 tar_load(participant_descriptives_final)
 ```
 
-`r stringr::str_to_sentence((xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria for participation included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. We excluded EEG data for analysis from three participants because they did not participate in the final session; one participant because their data from the final session was lost; and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
+`r stringr::str_to_sentence(xfun::numbers_to_words(participant_descriptives$n))` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria for participation included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. We excluded EEG data for analysis from three participants because they did not participate in the final session; one participant because their data from the final session was lost; and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
 
 ### Electrophysiological Data Acquisition
 
@@ -70,7 +70,7 @@ The purpose of this three step process was as follows: Filtering the data into f
 
 ### Functional Connectivity
 
-Functional connectivity was estimated between all pairs of EEG channels in each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which measure phase and amplitude coupling, respectively. Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction in the head, reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into ten symmetrical $64 \times 64$ matrices called *functional connectomes* (one functional connectome for each frequency band and measure), which reflected electrophysiological cortical functional networks derived from averaged oscillatory coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
+Functional connectivity was estimated between all pairs of EEG channels in each recording using the phase lag index [PLI; @stametal_PhaseLagIndex_2007] and the orthogonalized amplitude envelope correlation [AEC; @brookesetal_MeasuringFunctionalConnectivity_2011; @brookesetal_MeasuringFunctionalConnectivity_2012], which measure phase and amplitude coupling, respectively. Both the phase lag index and the orthogonalized amplitude envelope correlation account for the effects of field spread and volume conduction in the head, reducing the possibility of spurious coupling between channels from influencing our functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. The resulting functional connectivity estimates from each recording were collected into twelve symmetrical $64 \times 64$ matrices called *functional connectomes* per frequency band and measure, which reflected electrophysiological cortical functional networks derived from averaged phase or amplitude coupling between each pair of channels. These functional connectomes were the basic unit of observation for subsequent analyses.
 
 #### Phase coupling
 
@@ -154,7 +154,7 @@ The amplitude envelope correlation takes values between 0 and 1. A value of 0 in
 
 ### Functional connectome similarity
 
-The similarity of phase- and amplitude-based functional connectomes was next quantified by estimating the RV coefficient [@robertescoufier_UnifyingToolLinear_1976] between all pairs of functional connectomes from a given individual, session, and state within each frequency band. The RV coefficient is a multivariate measure of the linear relationship between two positive semi-definite matrices $\mathbf{X}$ and $\mathbf{Y}$ that takes values between 0 (no linear relationship) and 1 (perfect linear relationship) [@abdiherve_RVCoefficientCongruence_2007; @escoufier_TraitementVariablesVectorielles_1973; @josseholmes_MeasuringMultivariateAssociation_2016; @robertescoufier_UnifyingToolLinear_1976], given by:
+The similarity of phase- and amplitude-based functional connectomes was next quantified by estimating the RV coefficient [@robertescoufier_UnifyingToolLinear_1976] between all pairs of functional connectomes from a given individual, session, and state within each frequency band (14,028 pairs total<!--TODO inline code-->). The RV coefficient is a multivariate measure of the linear relationship between two positive semi-definite matrices $\mathbf{X}$ and $\mathbf{Y}$ that takes values between 0 (no linear relationship) and 1 (perfect linear relationship) [@abdiherve_RVCoefficientCongruence_2007; @escoufier_TraitementVariablesVectorielles_1973; @josseholmes_MeasuringMultivariateAssociation_2016; @robertescoufier_UnifyingToolLinear_1976], given by:
 
 $$
 \mathrm{RV}(\mathbf{X}, \mathbf{Y}) = \frac{ 
@@ -273,11 +273,11 @@ connectivity_patch -
   )
 ```
 
-After estimating the RV coefficient between all pairs of phase- and amplitude-based functional connectomes within each frequency band, we assessed how functional connectome similarity varied between and within individuals, sessions, and states using data visualization and statistical modelling.
+After estimating the RV coefficient between all pairs of phase and amplitude coupling functional connectomes within each frequency band, we assessed how functional connectome similarity varied between and within individuals, sessions, and states using data visualization and statistical modelling.
 
 #### Visualizing functional connectome similarity
 
-We collected the RV coefficient estimates into a similarity matrix, and then visualized them with a heat map to examine the amount and pattern of similarity within states, individuals, sessions, and the entire sample. With large effects, we would expect visually obvious patterns of similarity estimates corresponding to the archetypal outcomes depicted in Figure \@ref(fig:similarity-key) in the introduction.
+We collected the RV coefficient estimates into a similarity matrix, and then visualized them with a heat map to examine the amount and pattern of similarity within states, individuals, sessions, and the entire sample. With large effects, we would expect visually obvious patterns of similarity estimates corresponding to the archetypal outcomes depicted in Figure \@ref(fig:similarity-archetype-plots) in the introduction.
 
 #### Modelling functional connectome similarity
 
