--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -13,11 +13,11 @@ The neural causes of network variants and their stable trait-like features are n
 
 In order to observe network variants reliably, previous research has used highly sampled fMRI data analyzed within individuals prior to making comparisons between individuals [@elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @laumannetal_FunctionalSystemAreal_2015; cf. @elliottetal_WhatTestRetestReliability_2020]. Analyzing data without this first step, for example by averaging activation maps across individuals voxel-wise, will obscure network variants, leaving only what is common between individuals [@grattonetal_FunctionalBrainNetworks_2018; @speelmanmcgann_HowMeanMean_2013]. This may cause substantial and relevant portions of variability in whole brain functional networks to be overlooked [@grattonetal_FunctionalBrainNetworks_2018], resulting in unreliable inferences about the ways in which whole brain functional networks differ between individuals [@elliottetal_WhatTestRetestReliability_2020]. Similarly, although the common features of whole brain functional networks can typically be detected with 5-10 minutes of fMRI data when averaging across individuals, more than 25 minutes of data (collected continuously or across multiple scans) are needed to reliably detect network variants [@andersonetal_ReproducibilitySingleSubjectFunctional_2011; @elliottetal_GeneralFunctionalConnectivity_2019; @gordonetal_PrecisionFunctionalMapping_2017; @hackeretal_RestingStateNetwork_2013; @laumannetal_FunctionalSystemAreal_2015]. Due to the high cost of scan times, this level of measurement is not feasible for a majority of labs collecting their own data [@elliottetal_GeneralFunctionalConnectivity_2019]. In sum, network variants offer a promising new direction for better understanding network function, but the conditions required to study them reliably using fMRI are a considerable practical barrier. 
 
-A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for studying network variants beyond the window of fMRI. Electrophysiological recording methods such as electroencephalography (EEG) offer one such solution, given their cost effectiveness relative to fMRI. EEG directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time [@cohen_AnalyzingNeuralTime_2014; @luck_IntroductionEventrelatedPotential_2014; @oneilletal_DynamicsLargescaleElectrophysiological_2018], which offers two distinct advantages over fMRI. First, it allows us to directly probe the synchronization of neural oscillations in functional networks, bypassing the complexities of linking BOLD signals to the dynamics of underlying neural activity. Second, it allows us to measure neural oscillations at timescales much faster than the infraslow 0.1 Hz oscillations of BOLD signals, making it possible to test whether the organization of network variants is sensitive to timescales [cf., @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. There is currently debate about whether functional network organization is sensitive to timescales [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. One view predicts frequency-specific functional specialization of networks, and is supported by findings that connectivity in different frequency bands has been linked to different neural processes [e.g., @sadaghianikleinschmidt_BrainNetworksAOscillations_2016] and is more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. The other view predicts that functional network organization is timescale-invariant, and is supported by computational models that suggest functional networks have a common organization across timescales when averaged over sufficiently long periods [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
+A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for studying network variants beyond the window of fMRI. Electrophysiological recording methods such as electroencephalography (EEG) offer one such solution, given their cost effectiveness relative to fMRI. EEG directly measures the electrophysiological activity of neural populations in the cerebral cortex in real time [@cohen_AnalyzingNeuralTime_2014; @cohen_WhereDoesEEG_2017; @luck_IntroductionEventrelatedPotential_2014], which offers two distinct advantages over fMRI. First, it allows us to directly probe the synchronization of neural oscillations in functional networks, bypassing the complexities of linking BOLD signals to the dynamics of underlying neural activity. Second, it allows us to measure neural oscillations at timescales much faster than the infraslow 0.1 Hz oscillations of BOLD signals, making it possible to test whether the organization of network variants is sensitive to timescales [cf., @mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. There is currently debate about whether functional network organization is sensitive to timescales [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. One view predicts frequency-specific functional specialization of networks, and is supported by findings that connectivity in different frequency bands has been linked to different neural processes [e.g., @sadaghianikleinschmidt_BrainNetworksAOscillations_2016] and is more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. The other view predicts that functional network organization is timescale-invariant, and is supported by computational models that suggest functional networks have a common organization across timescales when averaged over sufficiently long periods [@sadaghianiwirsich_IntrinsicConnectomeOrganization_2020].
 
-Given these advantages, EEG has the potential to provide new and complementary information about network variants---specifically their organization at different timescales. However, there are also two disadvantages to note that may pose a challenge for identifying network variants with EEG. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. This means EEG is not well suited for addressing research questions about deep brain network variants; however, fMRI studies often limit their focus to cortical network variants [e.g., @grattonetal_FunctionalBrainNetworks_2018], so we do not perceive this as a problem. Additionally, although EEG does not have precise spatial resolution, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of temporal scale [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants should also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
+Given these advantages, EEG has the potential to provide new and complementary information about network variants---specifically their organization at different timescales. However, there are also two disadvantages to note that may pose a challenge for identifying network variants with EEG. First, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009], resulting in spurious estimates of connectivity between regions in functional networks. This can be addressed either through source reconstruction methods, which attempt to unmix measured signals to estimate the location of the underlying neural sources; or by using connectivity metrics that account for the effects of field spread and volume conduction in the head, which reduce the possibility of spurious coupling between channels from influencing functional connectivity estimates [@bastosschoffelen_TutorialReviewFunctional_2016]. Second, EEG is generally limited to measuring cortical neural activity and has poor spatial resolution compared to fMRI. This means EEG is not well suited for addressing research questions about deep brain network variants; however, fMRI studies often limit their focus to cortical network variants [e.g., @grattonetal_FunctionalBrainNetworks_2018], so we do not perceive this as a problem. Additionally, although EEG does not have precise spatial resolution, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with fMRI regardless of timescale [@danielarzate-menaetal_StationaryEEGPattern_2022; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, network variants should also be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
 
-Here, we use EEG data previously collected by our lab as part of a larger study---containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant---to answer this question. First we create a functional connectome from each recording by estimating the phase and amplitude coupling between all pairs of EEG channels. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Specifically, phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales, and amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales [@engeletal_IntrinsicCouplingModes_2013]. Then we test for the presence of network variants by estimating how functional connectomes differ between and within individuals using measures of network similarity.
+Here, we use EEG data previously collected by our lab as part of a larger study---containing a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant---to answer this question. First we create a functional connectome from each recording by estimating the phase and amplitude coupling between all pairs of EEG channels. Phase and amplitude coupling are thought to reflect different but related neurophysiological functions and it is common to use both measures so they can be compared [@engeletal_IntrinsicCouplingModes_2013; @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020; @wirsichetal_RelationshipEEGFMRI_2021]. Specifically, phase coupling is thought to regulate the integration and flow of cognitive contents on fast timescales, and amplitude coupling is thought to coordinate changes in (co)activation of brain areas on slow timescales [@engeletal_IntrinsicCouplingModes_2013]. Then we test for the presence of network variants by estimating how functional connectomes differ between and within individuals using measures of network similarity.
 
 Figure \@ref(fig:similarity-archetype-plots) depicts six archetypal outcomes we could find. The first row shows outcomes that would occur in cases where functional connectomes *do not* differ between individuals. In particular, we might expect to see (1) high similarity among all measurements regardless of individual, session, or state, which might occur if the brain activity we measured is largely intrinsic and common across individuals [cf. @raichle_TwoViewsBrain_2010]; (2) high similarity among all measurements regardless of individual or state, but not session, which might occur if the brain activity we measured is largely intrinsic, common across individuals, and varies over time in the same way across individuals; or (3) high similarity among all measurements regardless of individual or session, but not state, which might occur if the brain activity we measured is largely reactive in a way that is common across individuals [cf. @raichle_TwoViewsBrain_2010]. The second row shows outcomes that would occur in cases where functional connectomes *do* differ between individuals. In particular, we might expect to see (4) high similarity among all measurements regardless of session or state, but not individual, which might occur if the brain activity we measured is largely intrinsic and unique within individuals; (5) high similarity among all measurements regardless of state, but not individual or session, which might occur if the brain activity we measured is largely intrinsic, unique within individuals, and varies over time within individuals; or (6) high similarity among all measurements regardless of session, but not individual or state, which might occur if the brain activity we measured is largely reactive in a way that is unique within individuals.
 
