--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -56,9 +56,7 @@ bad_segments_duration_totals_mean <- mean(bad_segments_duration_totals)
 bad_segments_duration_totals_sd   <- sd(bad_segments_duration_totals)
 ```
 
-Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. All EEG preprocessing was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013]. The following steps were done to preprocess the raw EEG data from each recording.
-
-First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015]. Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. Third, data was rereferenced to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode [@nunezsrinivasan_ElectricFieldsBrain_2006]. Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Bad channels were marked in `r papaja::apa_num(bad_channels_percent_bad)`% of recordings, ranging from `r bad_channels_n_min` to `r bad_channels_n_max` bad channels marked per recording with a mode of `r bad_channels_n_mode`. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition.  Bad segments were marked in `r papaja::apa_num(bad_segments_percent_bad)`% of the recordings, ranging from `r bad_segments_n_min` to `r bad_segments_n_max` bad segments marked per recording with a mode of `r bad_segments_n_mode`. The total duration of bad segments per recording across the entire sample ranged from `r papaja::apa_num(bad_segments_duration_totals_min)` to `r papaja::apa_num(bad_segments_duration_totals_max)` seconds long (M = `r papaja::apa_num(bad_segments_duration_totals_mean)`, SD = `r papaja::apa_num(bad_segments_duration_totals_sd)`). Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually selected and then removed. Finally, bad channels were interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and put back into the data.
+Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. The following steps were done to preprocess the raw EEG data from each recording. First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015]. Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. Third, data was rereferenced to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode [@nunezsrinivasan_ElectricFieldsBrain_2006]. Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Bad channels were marked in `r papaja::apa_num(bad_channels_percent_bad)`% of recordings, ranging from `r bad_channels_n_min` to `r bad_channels_n_max` bad channels marked per recording with a mode of `r bad_channels_n_mode`. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition.  Bad segments were marked in `r papaja::apa_num(bad_segments_percent_bad)`% of the recordings, ranging from `r bad_segments_n_min` to `r bad_segments_n_max` bad segments marked per recording with a mode of `r bad_segments_n_mode`. The total duration of bad segments per recording across the entire sample ranged from `r papaja::apa_num(bad_segments_duration_totals_min)` to `r papaja::apa_num(bad_segments_duration_totals_max)` seconds long (M = `r papaja::apa_num(bad_segments_duration_totals_mean)`, SD = `r papaja::apa_num(bad_segments_duration_totals_sd)`). Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually selected and then removed. Finally, bad channels were interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and put back into the data.
 
 #### Preparing for functional connectivity analysis
 
@@ -292,3 +290,17 @@ The fit of the model was assessed using the following diagnostics: Posterior pre
 After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants. These contrasts were the estimands of our model and will be the focus of discussion in the results section.
 
 To explore how well the group-level model and contrasts represented individual differences in our sample, we also fit a mixed beta regression for each participant, following the same parameterizations as the group-level model. These individual-level models were followed-up using the same pairwise contrasts as in the group-level model, and comparisons between the group-level and individual-level estimands were done visually.
+
+## Data and code availability
+
+The raw and preprocessed EEG recordings used in this study are not currently openly available. All other data and code used in this study is openly available, and can be accessed at the study's GitHub repository <https://github.com/mccarthy-m-g/mccarthy-20XX> or Open Science Framework (OSF) repository <https://osf.io/xztdk/> (DOI: <https://doi.org/10.5281/zenodo.6578410>). Specifically: All functional connectivity data is licensed under the Creative Commons CC0 1.0 Universal, and all code is licensed under the MIT License. A copy of these licences and their terms can be found in the study's GitHub or OSF repository.
+
+## Software and computational reproducibility
+
+```{r}
+r_version <- paste0(R.version$major, ".", R.version$minor)
+```
+
+This project comes with a reproducible environment, using Docker <https://www.docker.com>, that includes everything needed to run its code or view its outputs.[^99] Instructions can be found in the study's GitHub or OSF repository. All computational steps were done using the open source programming language R [version `r r_version`, <https://www.R-project.org/>; @R-base]. We maintained a reproducible workflow for the entire pipeline---from data cleaning to reporting---using the targets package [@R-targets], and managed R and Python dependencies using the renv package [@R-renv]. All EEG preprocessing and functional connectivity analysis was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013], which was called from R using the reticulate package [@R-reticulate]. We estimated the RV coefficient using the FactoMineR package [@R-FactoMineR], and fit the mixed beta regression and contrasts using the glmmTMB [@R-glmmTMB] and emmeans [@R-emmeans] packages, respectively. The DHARMa [@R-DHARMa] and performance [@R-performance] packages were used for model diagnostics. All data visualization was done with a combination of the ggplot2 [@R-ggplot2], ggdist [@R-ggdist], ggh4x [@R-ggh4x], ggnewscale [@R-ggnewscale], and patchwork [@R-patchwork] packages. Other computations were done using the tidyverse [@R-tidyverse] suite of packages. Finally, this manuscript itself was written in R Markdown [@R-rmarkdown] using the papaja package's APA template [@R-papaja]. A complete record of the R environment and packages used in this study can be found in Tables \@ref(tab:session-info-environment) and \@ref(tab:session-info-packages) in the appendix.
+
+[^99]: Author's note: We have not yet created the reproducible environment.
